# olop

./: .gitignore  .oldec.py.swp  LICENSE  README.md  oldec.py  oldec_cmd.py  olp.py  pyobfs.py  setup.cfg  tmp.txt
old/: oldec.old.py  oldec.test.py
olp/: oldec.py  olp.py
src/olp/: __init__.py  oldec.py  oldec_cmd.py  olp.py
