[metadata]
name = olop-ShadowLugia650
version = 0.0.2
author = ShadowLugia650
author_email = 
description = One-Line and Obfuscated Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shadowlugia650/olop
project_urls =
    Bug Tracker = https://github.com/shadowlugia650/olop/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
